src/styles/index.scss
@use 'font/PPNeueMontreal';
@use 'font/PPWriter';
@use 'font/PPNeueMontrealMono.css';

:root {
    --global-padding: 1.2rem;
    --outline: 1px solid black;
    --sans-serif-font: 'PP Neue Montreal', sans-serif;
    --sans-serif-weight: 700;
    --serif-font: 'PP Writer', serif;
    --serif-weight: 345;
    --mono-font: 'PP Neue Montreal Mono', monospace;
    --mono-weight: 450;

    --offwhite: #faf9f6;
    --secondary-color: #606060;
    --black: #000000;

    --bg-color: var(--offwhite);
    --fg-color: var(--black);
}

html {
    font-size: 15px;
    scroll-behavior: smooth;
}

body {
    min-height: 100vh;
    max-width: 100vw;
    padding: var(--global-padding);
    display: flex;
    background-color: var(--bg-color);
    font-family: var(--serif-font);
    font-weight: var(--serif-weight);
    font-size: 1rem;
}

.page {
    outline: var(--outline);
    flex-grow: 1;
    display: flex;
    flex-direction: column;
    gap: 1px;
    max-width: 100%;
}

h1 {
    margin-block: 0;
}

h1 {
    font-family: var(--sans-serif-font);
    font-weight: var(--sans-serif-weight);
    font-size: 3rem;
}

h2 {
    font-weight: normal;
    font-style: italic;
    font-size: 1.4rem;
    margin-top: 1.6rem;
    margin-bottom: 1.1rem;
}

h3 {
    font-size: 1.2rem;
}

h4 {
    font-size: 1.1rem;
    font-weight: normal;
    font-style: italic;
}

h5 {
    font-size: 1rem;
}

a {
    color: var(--fg-color);
}

blockquote {
    margin-inline: 0;
    margin-block: var(--global-padding);
    padding-inline: var(--global-padding);
    padding-block: calc(var(--global-padding) / 2);
    background-color: #e0e0e0;
    position: relative;

    &::before {
        content: "";
        background-color: #a0a0a0;
        width: calc(var(--global-padding) / 2);
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
    }

    blockquote {
        background-color: #d0d0d0;
    }
}

ol, ul {
    padding-left: calc(var(--global-padding) * 1.5);
}

code {
    background-color: #e0e0e0;
    padding-inline: 5px;
    font-size: 0.95rem;
    font-family: var(--mono-font);
    font-weight: var(--mono-weight);
}

pre.astro-code {
    outline: var(--outline);
    padding: 5px;
    font-family: var(--mono-font);
    font-weight: var(--mono-weight);

    code {
        padding-inline: revert;
        background-color: revert;
    }
}

.pad {
    padding: var(--global-padding);
}

.child-margin-fix {
    & > :first-child {
        margin-top: 0;
    }

    & > :last-child {
        margin-bottom: 0;
    }
}

figure {
    width: 100%;
    margin: 0;
    padding-block: calc(var(--global-padding) / 2);
    text-align: center;

    figcaption {
        font-size: 0.9rem;
        font-style: italic;
    }
}

b, strong {
    // Override normalize behavior (breaks Writer)
    font-weight: bold;
}

img {
    width: 100%;
    height: auto;
}

header {
    padding: var(--global-padding);
    outline: var(--outline);
}

a[aria-describedby="footnote-label"] {
    scroll-margin-top: 48vh;
}

iframe {
    width: 100%;
}

.content {
    display: flex;
    flex-direction: column;
    gap: 1px;
    align-items: center;
}

table {
    border-collapse: collapse;
    border: var(--outline);
    width: 100%;
}

th, td {
    border: var(--outline);
    padding-inline: 5px;
    padding-block: 5px;
}

iframe[title="YouTube video player"] {
    width: 100%;
}

@media (min-width: 768px) {
    html {
        font-size: 18px;
    }
}

